tests/models/struct/named/string/fail/default.stderr
error: Support default condition is only string
 --> tests/models/struct/named/string/fail/default.rs:5:5
  |
5 |     value: String,
  |     ^^^^^
